Fixed some responsive column width issues on smaller screens

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -1,4 +1,5 @@
 pre{white-space:pre-wrap}
+.ellipsis{white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 
 .column>.box:not(.not-fullheight){height:100%}
 .column>.card{display:flex;flex-direction:column;height:100%;margin-bottom:0;overflow:hidden}
